# neurogallery

./: .gitignore  LICENSE  README.md  dreams.schema.json  manifest.schema.json
app/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/public/dreams/: dreams.json
app/public/sample-artifact/: manifest.json  metrics_summary.json
app/src/: App.tsx  main.tsx  test-setup.ts
app/src/components/: NeuralBackdrop.tsx  Reveal.tsx
app/src/hooks/: useDreams.ts  useManifest.ts
lab/: README.md  pyproject.toml
lab/neurogallery/: __init__.py  config.py
lab/neurogallery/data/: __init__.py  load.py
lab/neurogallery/dreams/: bdpy_adapter.py  build.py  decode.py  examples.py
lab/neurogallery/licensing/: __init__.py  resolve.py
lab/neurogallery/metrics/: __init__.py  core.py
lab/neurogallery/reconstruct/: __init__.py  base.py  brain_diffuser.py  clip_embedder.py  fake.py  ridge_fit.py
lab/scripts/: acquire_data.py  acquire_dreams.py  add_mindeye2.py  check_toolchain.py  decode_dreams.py  fit_ridge.py  make_brain_inputs.py  make_dreams.py  make_sample_artifact.py  prepare_metadata.py  run_build.py
lab/tests/fixtures/: valid_manifest.json
lab/tests/integration/: test_brain_diffuser_smoke.py  test_build_artifact.py  test_clip_embedder_smoke.py
lab/tests/unit/: test_config.py  test_data_load.py  test_decode_dreams_smoke.py  test_dreams_build.py  test_dreams_decode.py  test_fake_reconstructor.py  test_licensing.py  test_make_dreams_smoke.py  test_metrics.py  test_ridge_fit.py  test_schema.py
(+48 files in other folders)
