[project]
name = "neurogallery-lab"
version = "0.1.0"
description = "Offline lab: fMRI->image reconstruction artifact builder for NeuroGallery"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "scikit-image>=0.22",
    "jsonschema>=4.21",
    "h5py>=3.10",
    "huggingface_hub>=0.23",
    "scikit-learn>=1.4",
    "nibabel>=5.0",
]

[project.optional-dependencies]
gpu = [
    # Installé séparément avec l'index cu128 — voir README.
    "torch>=2.7",
    "torchvision>=0.22",
    "diffusers>=0.27",
    "transformers>=4.40",
    "open_clip_torch>=2.24",
    "accelerate>=0.30",   # chargement bas-mémoire + enable_model_cpu_offload()
]
data = [
    # Décodage rêves réel : nécessite le dataset bdpy téléchargé (voir acquire_dreams.py).
    "bdpy>=0.21",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests nécessitant un GPU + poids de modèles (exclus par défaut)",
    "data: tests needing the downloaded dream dataset (excluded by default)",
]
addopts = "-m 'not gpu and not data'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# hatchling ne peut pas déduire seul le paquet à empaqueter : le nom du
# projet (neurogallery-lab) ne correspond pas au nom du module importable
# (neurogallery). Déclaration explicite requise, sinon `pip install -e .` échoue
# avec "Unable to determine which files to ship inside the wheel".
packages = ["neurogallery"]
